enable google login

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,11 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     {% if username %}
+                    {% if logout %}
+                    <li><a href="{{logout}}">{{username}}</a></li>
+                    {%else %}
                     <li><a href="/logout">{{username}}</a></li>
+                    {%endif %}
                     {% else %}
                     <li><a href="/login">Login</a></li>
                     {%endif %}
