--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Chiamate
+<h2 class="center">Chiamate
     {% if is_open %}
     <span class="pull-right"><a href="/call" class="btn btn-info btn-sm"><i class="fa fa-plus"></i></a></span>
     {% endif %}
